html body-adding semantics

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 
 </head>
 <body>
+    <header class="container mx-auto">
+        <!-- nav -->
+        <!-- banner -->
+    </header>
     
+
+     <!-- main -->
+     <main>
+
+     </main>
+     <!-- footer -->
+     <footer>
+ 
+     </footer>
 </body>
 </html>
